--- a/cliente/index.html
+++ b/cliente/index.html
@@ -63,7 +63,7 @@
 
    <!-- <script src="./js/index.js"></script> -->
     <script src="./app/domain/negociacao/negociacao.js"></script>
-    <script>
+    <!--script>
         /* a classe constructor() não pode ser invocada sem operador new . 
         O operador new é bastante importante por ser o responsável pela 
         inicialização da variável implícita this de cada instância criada, 
@@ -91,8 +91,9 @@
         console.log(n1.data);
         console.log(n1.valor);
         console.log(teste);
-    </script>
-
+    </!--script-->
+    <script src="./app/controllers/NegociacaoController.js"></script>
+    <script src="./app/app.js"></script>
 </body>
 
 </html>
