template literal em DataConverter

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -93,6 +93,7 @@
         console.log(teste);
     </!--script-->
     <script src="./app/controllers/NegociacaoController.js"></script>
+    <script src="./app/ui/converters/DateConverter.js"></script>
     <script src="./app/app.js"></script>
 </body>
 
